crates/ruff_python_parser/src/parser/tests/snapshots/ruff_python_parser__parser__tests__function__tests__lambda_no_args.snap
---
source: crates/ruff_python_parser/src/parser/tests/function.rs
expression: parse_ast
---
Ok(
    [
        Expr(
            StmtExpr {
                range: 0..9,
                value: Lambda(
                    ExprLambda {
                        range: 0..9,
                        parameters: None,
                        body: NumberLiteral(
                            ExprNumberLiteral {
                                range: 8..9,
                                value: Int(
                                    1,
                                ),
                            },
                        ),
                    },
                ),
            },
        ),
    ],
)
